--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
-@main("Welcome to Play") {
+@main("Distributed System Forum") {
 
-    @play20.welcome(message, style = "Java")
+    @play20.welcome("THIS IS SPARTAAAAA", style = "Java")
 
 }
