--- a/app/views/commentPage.scala.html
+++ b/app/views/commentPage.scala.html
@@ -4,17 +4,17 @@
 
 <html lang="en">
     <head>
-        <title>Posting!</title>
+        <title>Commenting!</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/commentPage.css")">
         <script src="@routes.Assets.versioned("javascripts/commentPage.js")" type="text/javascript"></script>
     </head>
     <body>
-        @helper.form(routes.Application.createPost) {
+        @helper.form(routes.Application.createComment) {
             <h1>Commenting</h1>
             
             <label>
                 <span>Title:</span>
-                <input type="text" name="title" placeholder="How to make a forum!" value="@form("title").value" disabled>
+                <input type="text" name="title" placeholder="How to make a forum!" value="@form("postTitle").value" disabled>
             </label>
             
             <label>
