--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)
 
 <!DOCTYPE html>
 
@@ -10,6 +10,28 @@
         <script src="@routes.Assets.versioned("javascripts/index.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        <div>
+            <h1>Make a Post</h1>
+            <form action="/post">
+                <input type="submit" value="New Post">
+            </form>
+        </div>
+        <div>
+            <br>
+            <ul>
+                @for(post <- Application.posts) {
+                    <li>Title: @post.title &emsp; User: @post.owner</li>
+                    <li>&emsp;Content:<br>&emsp;@post.content</li>
+                    <br>
+                    <li>&emsp;&emsp;Comments:
+                        <form action="@routes.Application.newCommentClick(post.id)">
+                            <input type="submit" value="Add Comment"/>
+                        </form>
+                    </li>
+                    <br>
+                    <br>
+                }
+            </ul>
+        </div>
     </body>
 </html>
