The add comment button finally works and add comment properly

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -25,7 +25,7 @@
                     <br>
                     <li>&emsp;&emsp;Comments:
                         <form action="@routes.Application.newCommentClick(post.id)">
-                            <input type="submit" value="Add Comment"/>
+                            <input type="submit" value="Add Comment">
                         </form>
                     </li>
                     <br>
