--- a/app/views/postPage.scala.html
+++ b/app/views/postPage.scala.html
@@ -24,7 +24,7 @@
             
             <label>
                 <span>Message:</span>
-                <textarea style="resize:none" maxlength="500000" name="content" placeholder="1. Start Play Activator." value="@form("content").value" required></textarea>
+                <textarea style="resize:none" maxlength="500000" name="content" placeholder="1. Start Play Activator." value="" required>@form("content").value</textarea>
             </label>
             
             <p>
