--- a/app/views/commentPage.scala.html
+++ b/app/views/commentPage.scala.html
@@ -14,18 +14,20 @@
             
             <label>
                 <span>Title:</span>
-                <input type="text" name="title" placeholder="How to make a forum!" value="@form("postTitle").value" disabled>
+                <input type="text" name="title" placeholder="" value="@form("postTitle").value" disabled>
             </label>
             
             <label>
                 <span>Username:</span>
-                <input type="text" name="user" placeholder="John Doe" value="@form("user").value" required>
+                <input type="text" name="user" placeholder="" value="@form("user").value" required>
             </label>
             
             <label>
                 <span>Message:</span>
-                <textarea style="resize:none" maxlength="500000" name="content" placeholder="1. Start Play Activator." value="@form("content").value" required></textarea>
+                <textarea style="resize:none" maxlength="500000" name="content" placeholder="" value="" required>@form("content").value</textarea>
             </label>
+            
+            <input type="hidden" name="mainPostID" value="@form("mainPostID").value">
             
             <p>
                 <button type="submit">Comment!</button>
