--- a/app/views/postPage.scala.html
+++ b/app/views/postPage.scala.html
@@ -14,17 +14,17 @@
             
             <label>
                 <span>Title:</span>
-                <input type="text" name="title" placeholder="How to make a forum!" value="@form("title").value" required>
+                <input type="text" name="title" value="@form("title").value" required>
             </label>
             
             <label>
                 <span>Username:</span>
-                <input type="text" name="user" placeholder="John Doe" value="@form("user").value" required>
+                <input type="text" name="user" value="@form("user").value" required>
             </label>
             
             <label>
                 <span>Message:</span>
-                <textarea style="resize:none" maxlength="500000" name="content" placeholder="1. Start Play Activator." value="" required>@form("content").value</textarea>
+                <textarea style="resize:none" maxlength="500000" name="content" required>@form("content").value</textarea>
             </label>
             
             <p>
